--- a/Assets/CSS/productlist.css
+++ b/Assets/CSS/productlist.css
@@ -214,7 +214,7 @@
 }
 .home-section{
     position: relative;
-    background: #e1dfdf;
+    background: white;
     height: 150vh;
     left: 260px;
     width: calc(100% - 260px);
@@ -313,7 +313,7 @@ form{
     bottom: 10px;
 }
 .samoyed-box{
-    border: 1px solid #fff;
+    border: 2px solid black;
     border-radius: 10px;
     padding-top: 40px;
     padding-bottom: 40px;
@@ -342,17 +342,17 @@ form{
 }
 .samoyed-container a{
     text-decoration: none;
-    color: #11101d;
+    color: #1d1b31;
 }
 .samoyed-container button.open{
     position: relative;
-    border: none;
+    border: 2px solid balck;
     border-radius: 50%;
     height: 50px;
     width: 50px;
     left: 600px;
     top: 30px;
-    background-color: rgb(201, 198, 198);
+    background-color: white;
     cursor: pointer;
     box-shadow: #000 0px 0px 2px;
 }
