--- a/Assets/CSS/newlisting.css
+++ b/Assets/CSS/newlisting.css
@@ -425,7 +425,8 @@
 }
 .upload-detail3{
     display: flex;
-    padding-left: 120px;
+    padding-left: 140px;
+    padding-right: 140px;
     padding-top: 100px;
 }
 .collapsible{
@@ -528,7 +529,8 @@
 }
 .upload-detail4{
     display: flex;
-    padding-left: 120px;
+    padding-left: 140px;
+    padding-right: 140px;
     padding-top: 50px;
 }
 .health{
