--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -935,3 +935,109 @@
     font-weight: bold;
     cursor: pointer;
 }
+
+
+
+/*application details */
+.user-box{
+    display: flex;
+}
+.user-detail{
+    padding-top: 30px;
+    padding-left: 40px;
+    padding-right: 40px;
+    border: 2px solid black;
+    margin-top: 80px;
+    margin-left: 100px;
+    margin-right: 100px;
+    width: 100%;
+    border-radius: 10px;
+    padding-bottom: 80px;
+}
+.user-detail img{
+    width: 200px;
+    height: 200px;
+    position: relative;
+    left: 100px;
+    top: 20px;
+}
+.user-head{
+    position:relative;
+    left: 400px;
+    border-bottom: 1px solid black;
+    width: 17%;
+}
+.user-info{
+    position: absolute;
+    right: 400px;
+    top: 200px;
+}
+.user-info ul{
+    list-style: none;
+}
+.user-info li{
+    margin: 10px 0;
+}
+.user-info a{
+    text-decoration: none;
+    color: #1c1c6b;
+    font-size: 17px;
+}
+.order-detail{
+    padding-top: 100px;
+}
+.order-head{
+    position: relative;
+    left: 420px;
+    bottom: 20px;
+    border-bottom: 1px solid black;
+    width: 14%;
+}
+.order-detail img{
+    width: 200px;
+    height: 200px;
+    position: relative;
+    left: 100px;
+    top: 20px;
+    border-radius: 6px;
+}
+.order-info{
+    position: absolute;
+    right: 530px;
+    top: 500px;
+}
+.order-info ul{
+    list-style: none;
+}
+.order-info li{
+    margin: 10px 0;
+}
+.order-info a{
+    text-decoration: none;
+    color: #1c1c6b;
+    font-size: 17px;
+}
+.app-button{
+    position: relative;
+    left: 400px;
+    padding-top: 100px;
+}
+.confirm{
+    background-color: rgb(27, 210, 27);
+    border: none;
+    width: 100px;
+    height: 40px;
+    border-radius: 6px;
+    color: white;
+    cursor: pointer;
+}
+.app-cancel{
+    background-color: red;
+    border: none;
+    width: 100px;
+    height: 40px;
+    border-radius: 6px;
+    color: white;
+    margin-left: 10px;
+    cursor: pointer;
+}
