--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -204,6 +204,8 @@
     font-size: 18px;
     font-weight: 500;
     white-space: nowrap;
+    position: relative;
+    right: 30px;
 }
 .sidebar.close .profile-details i,
 .sidebar.close .profile-details .profile_name,
@@ -994,17 +996,17 @@
     width: 14%;
 }
 .order-detail img{
-    width: 200px;
+    width: 300px;
     height: 200px;
     position: relative;
-    left: 100px;
+    left: 50px;
     top: 20px;
     border-radius: 6px;
 }
 .order-info{
     position: absolute;
-    right: 530px;
-    top: 500px;
+    right: 450px;
+    top:520px;
 }
 .order-info ul{
     list-style: none;
